--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "dotenv": "^14.1.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
@@ -20,7 +21,9 @@
     "morgan": "^1.10.0",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.16.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
